[tool.poetry]
name = "ccam_web_server"
version = "0.1.0"
description = "Web server for ccam"
authors = ["James Delancey <jamesdelanceyjr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.19"
Paste = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
